// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleViewComponent is created 1`] = `
<app-simple-view
  FORMAT_DATE_TIMESTAMP={[Function String]}
  clickables$={[Function AnonymousSubject]}
  clicked={[Function EventEmitter_]}
  data$={[Function BehaviorSubject]}
  guessType={[Function Function]}
  isClickable="null"
  isDense="false"
  isExpandable="false"
  isExpanded={[Function Boolean]}
  isWidthConstrained={[Function Boolean]}
  keys$={[Function AnonymousSubject]}
  onClicked={[Function Function]}
  subheader="null"
  types$={[Function AnonymousSubject]}
>
</app-simple-view>
`;

exports[`SimpleViewComponent with data renders 1`] = `
<app-simple-view
  FORMAT_DATE_TIMESTAMP={[Function String]}
  clickables$={[Function AnonymousSubject]}
  clicked={[Function EventEmitter_]}
  data$={[Function BehaviorSubject]}
  guessType={[Function Function]}
  isClickable="null"
  isDense="false"
  isExpandable="false"
  isExpanded={[Function Boolean]}
  isWidthConstrained={[Function Boolean]}
  keys$={[Function AnonymousSubject]}
  onClicked={[Function Function]}
  subheader="null"
  types$={[Function AnonymousSubject]}
>
  <div
    class="position-relative ng-tns-c1038423380-0 ng-star-inserted"
  >
    <div
      class="scroll-x-auto ng-tns-c1038423380-0"
      ddflexbox="hys"
      ng-reflect-dd-flexbox="hys"
      style="max-width: 100%;"
    >
      <mat-list
        class="mat-list-auto-height ng-tns-c1038423380-0 ng-star-inserted"
      >
        <table
          class="ng-tns-c1038423380-0 ng-star-inserted"
        >
          <tr
            class="ng-tns-c1038423380-0 ng-star-inserted"
          >
            <td
              class="ng-tns-c1038423380-0"
              style="vertical-align: top;"
            >
              <mat-list-item
                class="ng-tns-c1038423380-0"
              >
                <span
                  class="no-break-text"
                >
                   undefined 
                </span>
              </mat-list-item>
            </td>
            <td
              class="ng-tns-c1038423380-0"
            >
              <mat-list-item
                class="ng-tns-c1038423380-0 ng-trigger ng-trigger-TRIGGER_WobbleX"
              >
                <span
                  class="break-text size-data-label"
                  ng-reflect-ng-class="[object Object]"
                >
                  <span
                    class="ng-tns-c1038423380-0 ng-star-inserted"
                    ng-reflect-ng-class="[object Object]"
                    style=""
                  >
                     value 
                  </span>
                </span>
              </mat-list-item>
            </td>
          </tr>
        </table>
      </mat-list>
    </div>
  </div>
</app-simple-view>
`;
